introduction nearly done

--- a/Bibliography/thesis_references.bib
+++ b/Bibliography/thesis_references.bib
@@ -1,6 +1,6 @@
 @article{Fratta2018,
 	abstract = {TDP‐43 (encoded by the gene TARDBP ) is an RNA binding protein central to the pathogenesis of amyotrophic lateral sclerosis (ALS). However, how TARDBP mutations trigger pathogenesis remains unknown. Here, we use novel mouse mutants carrying point mutations in endogenous Tardbp to dissect TDP‐43 function at physiological levels both in vitro and in vivo . Interestingly, we find that mutations within the C‐terminal domain of TDP‐43 lead to a gain of splicing function. Using two different strains, we are able to separate TDP‐43 loss‐ and gain‐of‐function effects. TDP‐43 gain‐of‐function effects in these mice reveal a novel category of splicing events controlled by TDP‐43, referred to as “skiptic” exons, in which skipping of constitutive exons causes changes in gene expression. In vivo , this gain‐of‐function mutation in endogenous Tardbp causes an adult‐onset neuromuscular phenotype accompanied by motor neuron loss and neurodegenerative changes. Furthermore, we have validated the splicing gain‐of‐function and skiptic exons in ALS patient‐derived cells. Our findings provide a novel pathogenic mechanism and highlight how TDP‐43 gain of function and loss of function affect RNA processing differently, suggesting they may act at different disease stages.},
-	author = {Fratta, Pietro and Sivakumar, Prasanth and Humphrey, Jack and Lo, Kitty and Ricketts, Thomas and Oliveira, Hugo and Brito‐Armas, Jose M and Kalmar, Bernadett and Ule, Agnieszka and Yu, Yichao and Birsa, Nicol and Bodo, Cristian and Collins, Toby and Conicella, Alexander E and {Mejia Maza}, Alan and Marrero‐Gagliardi, Alessandro and Stewart, Michelle and Mianne, Joffrey and Corrochano, Silvia and Emmett, Warren and Codner, Gemma and Groves, Michael and Fukumura, Ryutaro and Gondo, Yoichi and Lythgoe, Mark and Pauws, Erwin and Peskett, Emma and Stanier, Philip and Teboul, Lydia and Hallegger, Martina and Calvo, Andrea and Chi{\`{o}}, Adriano and Isaacs, Adrian M and Fawzi, Nicolas L and Wang, Eric and Housman, David E and Baralle, Francisco and Greensmith, Linda and Buratti, Emanuele and Plagnol, Vincent and Fisher, Elizabeth MC and Acevedo‐Arozena, Abraham},
+	author = {Fratta, Pietro and Sivakumar, Prasanth and Humphrey, Jack and Lo, Kitty and Ricketts, Thomas and Oliveira, Hugo and Brito-Armas, Jose M and Kalmar, Bernadett and Ule, Agnieszka and Yu, Yichao and Birsa, Nicol and Bodo, Cristian and Collins, Toby and Conicella, Alexander E and {Mejia Maza}, Alan and Marrero‐Gagliardi, Alessandro and Stewart, Michelle and Mianne, Joffrey and Corrochano, Silvia and Emmett, Warren and Codner, Gemma and Groves, Michael and Fukumura, Ryutaro and Gondo, Yoichi and Lythgoe, Mark and Pauws, Erwin and Peskett, Emma and Stanier, Philip and Teboul, Lydia and Hallegger, Martina and Calvo, Andrea and Chi{\`{o}}, Adriano and Isaacs, Adrian M and Fawzi, Nicolas L and Wang, Eric and Housman, David E and Baralle, Francisco and Greensmith, Linda and Buratti, Emanuele and Plagnol, Vincent and Fisher, Elizabeth MC and Acevedo‐Arozena, Abraham},
 	doi = {10.15252/embj.201798684},
 	file = {:Users/jack/Downloads/e98684.full.pdf:pdf},
 	issn = {0261-4189},
@@ -8,8 +8,59 @@
 	keywords = {als,cryptic exon,neuroscience,of disease,rna,skiptic exon,splicing,subject categories molecular biology,tdp- 43},
 	pages = {e98684},
 	pmid = {29764981},
-	title = {{Mice with endogenous TDP‐43 mutations exhibit gain of splicing function and characteristics of amyotrophic lateral sclerosis}},
+	title = {{Mice with endogenous TDP-43 mutations exhibit gain of splicing function and characteristics of amyotrophic lateral sclerosis}},
 	year = {2018}
+}
+
+@article{Stamm2000,
+	abstract = {Chemosensory systems play vital roles in the lives of most mammals, including the detection and identification of predators, as well as sex and reproductive status and the identification of individual conspecifics. All of these capabilities require a process of recognition involving a combination of innate (kairomonal/pheromonal) and learned responses. Across very different phylogenies, the mechanisms for pheromonal and odour learning have much in common. They are frequently associated with plasticity of GABA-ergic feedback at the initial level of processing the chemosensory information, which enhances its pattern separation capability. Association of odourant features into an odour object primarily involves anterior piriform cortex for non-social odours. However, the medial amygdala appears to be involved in both the recognition of social odours and their association with chemosensory information sensed by the vomeronasal system. Unusually not only the sensory neurons themselves, but also the GABA-ergic interneurons in the olfactory bulb are continually being replaced, with implications for the induction and maintenance of learned chemosensory responses.},
+	author = {Stamm, Stefan and Zhu, Jian and Nakai, Kenta and Stoilov, Peter and Stoss, Oliver and Zhang, Michael Q.},
+	doi = {10.1089/104454900750058107},
+	file = {:Users/jack/Downloads/Papers/stamm2000.pdf:pdf},
+	isbn = {1044-5498 (Print)$\backslash$r1044-5498 (Linking)},
+	issn = {1044-5498},
+	journal = {DNA and Cell Biology},
+	number = {12},
+	pages = {739--756},
+	pmid = {25451762},
+	title = {{An Alternative-Exon Database and Its Statistical Analysis}},
+	url = {http://www.liebertpub.com/doi/10.1089/104454900750058107},
+	volume = {19},
+	year = {2000}
+}
+@article{Barmada2010,
+	abstract = {Mutations in the gene encoding TDP-43-the major protein component of neuronal aggregates characteristic of amyotrophic lateral sclerosis (ALS) and frontotemporal lobar degeneration (FTLD) with ubiquitin-positive inclusion bodies-have been linked to familial forms of both disorders. Aggregates of TDP-43 in cortical and spinal motorneurons in ALS, or in neurons of the frontal and temporal cortices in FTLD, are closely linked to neuron loss and atrophy in these areas. However, the mechanism by which TDP-43 mutations lead to neurodegeneration is unclear. To investigate the pathogenic role of TDP-43 mutations, we established a model of TDP-43 proteinopathies by expressing fluorescently tagged wild-type and mutant TDP-43 in primary rat cortical neurons. Expression of mutant TDP-43 was toxic to neurons, and mutant-specific toxicity was associated with increased cytoplasmic mislocalization of TDP-43. Inclusion bodies were not necessary for the toxicity and did not affect the risk of cell death. Cellular survival was unaffected by the total amount of exogenous TDP-43 in the nucleus, but the amount of cytoplasmic TDP-43 was a strong and independent predictor of neuronal death. These results suggest that mutant TDP-43 is mislocalized to the cytoplasm, where it exhibits a toxic gain-of-function and induces cell death.},
+	annote = {Overexpression of WT and MUT human TDP in rat cortical neurons
+	TDP aggregates not seen yet cytoplasmic TDP seen and was toxic},
+	author = {Barmada, S. J. and Skibinski, G. and Korb, E. and Rao, E. J. and Wu, J. Y. and Finkbeiner, S.},
+	doi = {10.1523/JNEUROSCI.4988-09.2010},
+	file = {:Users/jack/Downloads/Papers/639.full.pdf:pdf},
+	isbn = {1529-2401 (Electronic)$\backslash$r0270-6474 (Linking)},
+	issn = {0270-6474},
+	journal = {Journal of Neuroscience},
+	number = {2},
+	pages = {639--649},
+	pmid = {20071528},
+	title = {{Cytoplasmic Mislocalization of TDP-43 Is Toxic to Neurons and Enhanced by a Mutation Associated with Familial Amyotrophic Lateral Sclerosis}},
+	url = {http://www.jneurosci.org/cgi/doi/10.1523/JNEUROSCI.4988-09.2010},
+	volume = {30},
+	year = {2010}
+}
+@article{Kapeli2017,
+	abstract = {Mutations in genes that encode {\{}RNA-binding{\}} proteins {\{}(RBPs){\}} have emerged as critical determinants of neurological diseases, especially motor neuron disorders such as amyotrophic lateral sclerosis {\{}(ALS).{\}} {\{}RBPs{\}} are involved in all aspects of {\{}RNA{\}} processing, controlling the life cycle of {\{}RNAs{\}} from synthesis to degradation. Hallmark features of {\{}RBPs{\}} in neuron dysfunction include misregulation of {\{}RNA{\}} processing, mislocalization of {\{}RBPs{\}} to the cytoplasm, and abnormal aggregation of {\{}RBPs.{\}} Much progress has been made in understanding how {\{}ALS-associated{\}} mutations in {\{}RBPs{\}} drive pathogenesis. Here, we focus on several key {\{}RBPs{\}} involved in {\{}ALS-TDP-43,{\}} {\{}HNRNP{\}} {\{}A2/B1,{\}} {\{}HNRNP{\}} A1, {\{}FUS,{\}} {\{}EWSR1,{\}} and {\{}TAF15-and{\}} review our current understanding of how mutations in these proteins cause disease.},
+	author = {Kapeli, Katannya and Martinez, Fernando J. and Yeo, Gene W.},
+	doi = {10.1007/s00439-017-1830-7},
+	file = {:Users/jack/Downloads/Papers/Kapeli2017{\_}Article{\_}GeneticMutationsInRNA-bindingP.pdf:pdf},
+	isbn = {0123456789},
+	issn = {14321203},
+	journal = {Human Genetics},
+	number = {9},
+	pages = {1193--1214},
+	pmid = {28762175},
+	publisher = {Springer Berlin Heidelberg},
+	title = {{Genetic mutations in RNA-binding proteins and their roles in ALS}},
+	volume = {136},
+	year = {2017}
 }
 
 @article{Smith2014,
@@ -808,7 +859,7 @@
 	file = {:Users/jack/Downloads/Papers/1774.full.pdf:pdf},
 	isbn = {0261-4189 (Print)$\backslash$r0261-4189 (Linking)},
 	issn = {02614189},
-	journal = {EMBO Journal},
+	journal = {The EMBO Journal},
 	keywords = {ASF,Alternative splicing,CFTR exon 9,Cystic fibrosis,SF2,TDP-43},
 	number = {7},
 	pages = {1774--1784},
@@ -1092,7 +1143,7 @@
 	file = {:Users/jack/Downloads/Papers/emboj2012319a.pdf:pdf},
 	isbn = {1460-2075 (Electronic)$\backslash$n0261-4189 (Linking)},
 	issn = {02614189},
-	journal = {EMBO Journal},
+	journal = {The EMBO Journal},
 	keywords = {ALS,Drosha,FUS/TLS,chromatin immunoprecipitation,microRNA},
 	number = {24},
 	pages = {4502--4510},
@@ -1227,7 +1278,7 @@
 	file = {:Users/jack/Downloads/Papers/2841.full.pdf:pdf},
 	isbn = {0261-4189},
 	issn = {02614189},
-	journal = {EMBO Journal},
+	journal = {The EMBO Journal},
 	keywords = {Transportin,amyotrophic lateral sclerosis (ALS),frontotemporal lobar degeneration (FTLD),fused in sarcoma (FUS),stress granules},
 	number = {16},
 	pages = {2841--2857},
@@ -1252,20 +1303,6 @@
 	title = {{An important class of intron retention events in human erythroblasts is regulated by cryptic exons proposed to function as splicing decoys}},
 	url = {http://rnajournal.cshlp.org/lookup/doi/10.1261/rna.066951.118},
 	year = {2018}
-}
-
-@article{Masuda2015a,
-	abstract = {More than half of all human genes produce prematurely terminated polyadenylated short mRNAs. However, the underlying mechanisms remain largely elusive. CLIP-seq (cross-linking immunoprecipitation [CLIP] combined with deep sequencing) of FUS (fused in sarcoma) in neuronal cells showed that FUS is frequently clustered around an alternative polyadenylation (APA) site of nascent RNA. ChIP-seq (chromatin immunoprecipitation [ChIP] combined with deep sequencing) of RNA polymerase II (RNAP II) demonstrated that FUS stalls RNAP II and prematurely terminates transcription. When an APA site is located upstream of an FUS cluster, FUS enhances polyadenylation by recruiting CPSF160 and up-regulates the alternative short transcript. In contrast, when an APA site is located downstream from an FUS cluster, polyadenylation is not activated, and the RNAP II-suppressing effect of FUS leads to down-regulation of the alternative short transcript. CAGE-seq (cap analysis of gene expression [CAGE] combined with deep sequencing) and PolyA-seq (a strand-specific and quantitative method for high-throughput sequencing of 3' ends of polyadenylated transcripts) revealed that position-specific regulation of mRNA lengths by FUS is operational in two-thirds of transcripts in neuronal cells, with enrichment in genes involved in synaptic activities.},
-	author = {Masuda, Akio and Takeda, Jun-ichi and Okuno, Tatsuya and Okamoto, Takaaki and Ohkawara, Bisei and Ito, Mikako and Ishigaki, Shinsuke and Sobue, Gen and Ohno, Kinji},
-	doi = {10.1101/gad.255737.114.itation},
-	file = {:Users/jack/Library/Application Support/Mendeley Desktop/Downloaded/Masuda et al. - 2015 - Position-specific binding of FUS to nascent RNA regulates mRNA length.pdf:pdf},
-	issn = {0890-9369},
-	journal = {Genes {\&} Development},
-	keywords = {2014,2015,22,alternative polyadenylation,clip,for this article,fus,fused in sarcoma,mrna length,received november 11,revised version accepted april,rna polymerase ii,supplemental material is available,tls,translocated in liposarcoma},
-	pages = {1045--1057},
-	pmid = {25995189},
-	title = {{Position-specific binding of FUS to nascent RNA regulates mRNA length}},
-	year = {2015}
 }
 
 @article{Ishigaki2012,
@@ -1325,7 +1362,7 @@
 	file = {:Users/jack/Downloads/Papers/1608.full.pdf:pdf},
 	isbn = {0261-4189 (Print)},
 	issn = {02614189},
-	journal = {EMBO Journal},
+	journal = {The EMBO Journal},
 	keywords = {Alternative splicing,Exonic splicing silencer,KH domain,Neuron specific,RNA-binding protein},
 	number = {8},
 	pages = {1608--1620},
@@ -1461,7 +1498,7 @@
 	file = {:Users/Jack/Downloads/The epidemiology of frontotemporal dementia.pdf:pdf},
 	isbn = {1369-1627 (Electronic)$\backslash$r0954-0261 (Linking)},
 	issn = {1369-1627},
-	journal = {International review of psychiatry (Abingdon, England)},
+	journal = {International Review of Psychiatry},
 	number = {2},
 	pages = {130--7},
 	pmid = {23611343},
@@ -1794,7 +1831,7 @@ year = {2016}
 	number = {3},
 	pages = {536--543},
 	publisher = {Elsevier Inc.},
-	title = {{Axonal Transport of TDP-43 mRNA Granules Is Impaired by ALS-Causing Mutations}},
+	title = {{Axonal transport of TDP-43 mRNA granules is impaired by ALS-causing mutations}},
 	NOOPurl = {http://dx.doi.org/10.1016/j.neuron.2013.12.018},
 	volume = {81},
 	year = {2013}
@@ -2086,7 +2123,7 @@ year = {2016}
 	number = {6},
 	pages = {1193--1205},
 	pmid = {23257289},
-	title = {{Rna-binding ability of FUS regulates neurodegeneration, cytoplasmic mislocalization and incorporation into stress granules associated with FUS carrying ALS-linked mutations}},
+	title = {{RNA-binding ability of FUS regulates neurodegeneration, cytoplasmic mislocalization and incorporation into stress granules associated with FUS carrying ALS-linked mutations}},
 	volume = {22},
 	year = {2013}
 }
@@ -2302,14 +2339,17 @@ year = {2016}
 	year = {2015}
 }
 @article{Ng2015,
-	author = {Ng, Shi-yan and Soh, Boon Seng and Rodriguez-muela, Natalia and Hendrickson, David G and Price, Feodor and Rodriguez-muela, Natalia and Price, Feodor and Rinn, John L and Rubin, Lee L},
+	author = {Ng, Shi-Yan and Soh, Boon Seng and Rodriguez-Muela, Natalia and Hendrickson, David G. and Price, Feodor and Rinn, John L. and Rubin, Lee L.},
 	doi = {10.1016/j.stem.2015.08.003},
-	file = {:Users/Jack/Downloads/ng{\_}MARIS{\_}sup.pdf:pdf},
-	issn = {1934-5909},
-	journal = {Stem Cell},
-	pages = {1--16},
-	title = {{Genome-wide RNA-Seq of Human Motor Neurons Implicates Selective ER Stress Activation in Spinal Article Genome-wide RNA-Seq of Human Motor Neurons Implicates Selective ER Stress Activation SUPPLEMENTARY}},
-	NOOPurl = {http://dx.doi.org/10.1016/j.stem.2015.08.003},
+	file = {:Users/jack/Library/Application Support/Mendeley Desktop/Downloaded/Ng et al. - 2015 - Genome-wide RNA-Seq of Human Motor Neurons Implicates Selective ER Stress Activation in Spinal Muscular Atrophy.pdf:pdf},
+	issn = {19345909},
+	journal = {Cell Stem Cell},
+	number = {5},
+	pages = {569--584},
+	publisher = {Elsevier Inc.},
+	title = {{Genome-wide RNA-Seq of Human Motor Neurons Implicates Selective ER Stress Activation in Spinal Muscular Atrophy}},
+	url = {http://linkinghub.elsevier.com/retrieve/pii/S1934590915003586},
+	volume = {17},
 	year = {2015}
 }
 @article{Mukhopadhyay2009,
@@ -2504,19 +2544,7 @@ year = {2016}
 	volume = {146},
 	year = {2011}
 }
-@article{Lagier-Tourenne2012,
-	author = {Lagier-Tourenne, Clotilde and Polymenidou, Magdalini and Hutt, Kasey R and Vu, Anthony Q and Baughn, Michael and Huelga, Stephanie C and Clutario, Kevin M and Ling, Shuo-Chien and Liang, Tiffany Y and Mazur, Curt and Wancewicz, Edward and Kim, Aneeza S and Watt, Andy and Freier, Sue and Hicks, Geoffrey G and Donohue, John Paul and Shiue, Lily and Bennett, C Frank and Ravits, John and Cleveland, Don W and Yeo, Gene W},
-	doi = {10.1038/nn.3230},
-	file = {:Users/Jack/Downloads/nn.3230-S1.pdf:pdf},
-	issn = {1097-6256},
-	journal = {Nature Neuroscience},
-	number = {11},
-	pages = {1488--1497},
-	title = {{SUP: Divergent roles of ALS-linked proteins FUS/TLS and TDP-43 intersect in processing long pre-mRNAs}},
-	NOOPurl = {http://www.nature.com/doifinder/10.1038/nn.3230},
-	volume = {15},
-	year = {2012}
-}
+
 @article{Falaleeva2016,
 	author = {Falaleeva, Marina and Pages, Amadis and Matuszek, Zaneta and Hidmi, Sana and Agranat-Tamir, Lily and Korotkov, Konstantin and Nevo, Yuval and Eyras, Eduardo and Sperling, Ruth and Stamm, Stefan},
 	doi = {10.1073/pnas.1519292113},
@@ -2575,7 +2603,7 @@ year = {2016}
 	journal = {Journal of Parkinson's Disease},
 	keywords = {alzheimer,cognitive impairment,disease progression,formaldehyde,methanol,s disease,tau hyperphosphorylation},
 	pages = {1--13},
-	title = {{Transcriptomic Profiling of Extracellular RNAs Present in Cerebrospinal Fluid Identifies Differentially Expressed Transcripts in Parkinson's Diseases}},
+	title = {{Transcriptomic profiling of extracellular RNAs present in cerebrospinal fluid identifies differentially expressed transcripts in parkinson's diseases}},
 	year = {2014}
 }
 @article{Gymrek2015,
@@ -2608,16 +2636,7 @@ year = {2016}
 	volume = {6},
 	year = {2016}
 }
-@article{Colombrita2015,
-	author = {Colombrita, Claudia and Onesto, Elisa and Buratti, Emanuele and de la Grange, Pierre and Gumina, Valentina and Baralle, Francisco E. and Silani, Vincenzo and Ratti, Antonia},
-	doi = {10.1016/j.bbagrm.2015.10.015},
-	file = {:Users/Jack/Downloads/mmc2 (1).pdf:pdf},
-	issn = {18749399},
-	journal = {Biochimica et Biophysica Acta (BBA) - Gene Regulatory Mechanisms},
-	title = {{SUPP From transcriptomic to protein level changes in tdp-43 and fus loss-of-function cell models}},
-	NOOPurl = {http://linkinghub.elsevier.com/retrieve/pii/S1874939915002278},
-	year = {2015}
-}
+
 @article{Ricketts2014,
 	abstract = {Mutations in TARDBP, encoding Tar DNA binding protein-43 (TDP43), cause amyotrophic lateral sclerosis (ALS) and frontotemporal dementia (FTD). Attempts to model TDP43 dysfunction in mice have used knockouts or transgenic overexpressors, which have revealed the difficulties of manipulating TDP43, whose level is tightly controlled by auto-regulation. In a complementary approach, to create useful mouse models for the dissection of TDP43 function and pathology, we have identified a nonsense mutation in the endogenous mouse Tardbp gene through screening an N-ethyl-N-nitrosourea (ENU) mutant mouse archive. The mutation is predicted to cause a Q101X truncation in TDP43. We have characterised Tardbp(Q101X) mice to investigate this mutation in perturbing TDP43 biology at endogenous expression levels. We found the Tardbp(Q101X) mutation is homozygous embryonic lethal, highlighting the importance of TDP43 in early development. Heterozygotes (Tardbp(+/Q101X) ) have abnormal levels of mutant transcript, but we find no evidence of the truncated protein and mice have similar full-length TDP43 protein levels as wildtype littermates. Nevertheless, Tardbp(+/Q101X) mice have abnormal alternative splicing of downstream gene targets, and limb-clasp and body tone phenotypes. Thus the nonsense mutation in Tardbp causes a mild loss-of-function phenotype and behavioural assessment suggests underlying neurological abnormalities. Due to the role of TDP43 in ALS, we investigated potential interactions with another known causative gene, mutant superoxide dismutase 1 (SOD1). Tardbp(+/Q101X) mice were crossed with the SOD1(G93Adl) transgenic mouse model of ALS. Behavioural and physiological assessment did not reveal modifying effects on the progression of ALS-like symptoms in the double mutant progeny from this cross. In summary, the Tardbp(Q101X) mutant mice are a useful tool for the dissection of TDP43 protein regulation, effects on splicing, embryonic development and neuromuscular phenotypes. These mice are freely available to the community.},
 	author = {Ricketts, Thomas and McGoldrick, Philip and Fratta, Pietro and {De Oliveira}, Hugo M. and Kent, Rosie and Phatak, Vinaya and Brandner, Sebastian and Blanco, Gonzalo and Greensmith, Linda and Acevedo-Arozena, Abraham and Fisher, Elizabeth M C},
@@ -2703,7 +2722,7 @@ year = {2016}
 	volume = {15},
 	year = {2014}
 }
-@article{Lagier-Tourenne2012a,
+@article{Lagier-Tourenne2012,
 	author = {Lagier-Tourenne, Clotilde and Polymenidou, Magdalini and Hutt, Kasey R and Vu, Anthony Q and Baughn, Michael and Huelga, Stephanie C and Clutario, Kevin M and Ling, Shuo-Chien and Liang, Tiffany Y and Mazur, Curt and Wancewicz, Edward and Kim, Aneeza S and Watt, Andy and Freier, Sue and Hicks, Geoffrey G and Donohue, John Paul and Shiue, Lily and Bennett, C Frank and Ravits, John and Cleveland, Don W and Yeo, Gene W},
 	doi = {10.1038/nn.3230},
 	file = {:Users/Jack/Downloads/nn.3230.pdf:pdf},
@@ -2723,7 +2742,7 @@ year = {2016}
 	doi = {10.1101/gad.255737.114.itation},
 	file = {:Users/Jack/Downloads/Genes Dev.-2015-Masuda-1045-57.pdf:pdf},
 	issn = {0890-9369},
-	journal = {Genes {\&} Development},
+	journal = {Genes and Development},
 	keywords = {2014,2015,22,alternative polyadenylation,clip,for this article,fus,fused in sarcoma,mrna length,received november 11,revised version accepted april,rna polymerase ii,supplemental material is available,tls,translocated in liposarcoma},
 	pages = {1045--1057},
 	pmid = {25995189},
@@ -4339,14 +4358,7 @@ BibTeX export options can be customized via Preferences -> BibTeX in Mendeley De
 	volume = {133},
 	year = {2010}
 }
-@article{Koyama2016,
-	author = {Koyama, Akihide},
-	file = {:Users/Jack/Downloads/nar-03300-a-2015-File011.pdf:pdf},
-	journal = {Nucleic Acids Research},
-	pages = {4--5},
-	title = {{SUP Increased cytoplasmic TARDBP mRNA in affected spinal motor neurons in ALS caused by abnormal autoregulation of TDP-43}},
-	year = {2016}
-}
+
 
 @article{Scekic-Zahirovic2017,
 	abstract = {Motor neuron-extrinsic mechanisms have been shown to participate in the pathogenesis of ALS-SOD1, one familial form of amyotrophic lateral sclerosis (ALS). It remains unclear whether such mechanisms contribute to other familial forms, such as TDP-43 and FUS-associated ALS. Here, we characterize a single-copy mouse model of ALS-FUS that conditionally expresses a disease-relevant truncating FUS mutant from the endogenous murine Fus gene. We show that these mice, but not mice heterozygous for a Fus null allele, develop similar pathology as ALS-FUS patients and a mild motor neuron phenotype. Most importantly, CRE-mediated rescue of the Fus mutation within motor neurons prevented degeneration of motor neuron cell bodies, but only delayed appearance of motor symptoms. Indeed, we observed downregulation of multiple myelin-related genes, and increased numbers of oligodendrocytes in the spinal cord supporting their contribution to behavioral deficits. In all, we show that mutant FUS triggers toxic events in both motor neurons and neighboring cells to elicit motor neuron disease.},
@@ -5371,7 +5383,22 @@ BibTeX export options can be customized via Preferences -> BibTeX in Mendeley De
 	volume = {46},
 	year = {2014}
 }
-
+@article{Colombrita2009,
+	abstract = {Transactive response DNA-binding protein 43 (TDP-43) forms abnormal ubiquitinated and phosphorylated inclusions in brain tissues from patients with amyotrophic lateral sclerosis (ALS) and frontotemporal lobar degeneration. TDP-43 is a DNA/RNA-binding protein involved in RNA processing, such as transcription, pre-mRNA splicing, mRNA stabilization and transport to dendrites. We found that in response to oxidative stress and to environmental insults of different types TDP-43 is capable to assemble into stress granules (SGs), ribonucleoprotein complexes where protein synthesis is temporarily arrested. We demonstrated that a specific aminoacidic interval (216-315) in the C-terminal region and the RNA-recognition motif 1 domain are both implicated in TDP-43 participation in SGs as their deletion prevented the recruitment of TDP-43 into SGs. Our data show that TDP-43 is a specific component of SGs and not of processing bodies, although we proved that TDP-43 is not necessary for SG formation, and its gene silencing does not impair cell survival during stress. The analysis of spinal cord tissue from ALS patients showed that SG markers are not entrapped in TDP-43 pathological inclusions. Although SGs were not evident in ALS brains, we speculate that an altered control of mRNA translation in stressful conditions may trigger motor neuron degeneration at early stages of the disease.},
+	author = {Colombrita, Claudia and Zennaro, Eleonora and Fallini, Claudia and Weber, Markus and Sommacal, Andreas and Buratti, Emanuele and Silani, Vincenzo and Ratti, Antonia},
+	doi = {10.1111/j.1471-4159.2009.06383.x},
+	file = {:Users/jack/Downloads/Papers/Colombrita{\_}et{\_}al-2009-Journal{\_}of{\_}Neurochemistry.pdf:pdf},
+	isbn = {1471-4159 (Electronic)$\backslash$r0022-3042 (Linking)},
+	issn = {00223042},
+	journal = {Journal of Neurochemistry},
+	keywords = {Amyotrophic lateral sclerosis,RNA-binding protein,Stress granules,Transactive response DNA-binding protein 43},
+	number = {4},
+	pages = {1051--1061},
+	pmid = {19765185},
+	title = {{TDP-43 is recruited to stress granules in conditions of oxidative insult}},
+	volume = {111},
+	year = {2009}
+}
 @article{Harrow2012,
 	author = {Harrow, Jennifer and Frankish, Adam and Gonzalez, Jose M and Frazer, Kelly A},
 	doi = {10.1101/gr.135350.111},
@@ -5385,7 +5412,7 @@ BibTeX export options can be customized via Preferences -> BibTeX in Mendeley De
 	volume = {22},
 	year = {2012}
 }
-@article{Colombrita2015a,
+@article{Colombrita2015,
 	author = {Colombrita, Claudia and Onesto, Elisa and Buratti, Emanuele and de la Grange, Pierre and Gumina, Valentina and Baralle, Francisco E. and Silani, Vincenzo and Ratti, Antonia},
 	doi = {10.1016/j.bbagrm.2015.10.015},
 	file = {:Users/Jack/Downloads/1-s2.0-S1874939915002278-main.pdf:pdf},
@@ -5502,7 +5529,7 @@ BibTeX export options can be customized via Preferences -> BibTeX in Mendeley De
 	keywords = {als,clip,conserved intron,ftld,fus,splicing},
 	pages = {498--509},
 	pmid = {23389473},
-	title = {{FUS regulates genes coding for RNA-binding proteins in neurons by binding to their highly conserved introns FUS regulates genes coding for RNA-binding proteins in neurons by binding to their highly conserved introns}},
+	title = {{FUS regulates genes coding for RNA-binding proteins in neurons by binding to their highly conserved introns}},
 	year = {2013}
 }
 @article{Schwartz2012,
@@ -6090,7 +6117,7 @@ BibTeX export options can be customized via Preferences -> BibTeX in Mendeley De
 	volume = {5},
 	year = {2016}
 }
-@article{Koyama2016a,
+@article{Koyama2016,
 	author = {Koyama, Akihide and Sugai, Akihiro and Kato, Taisuke and Ishihara, Tomohiko and Shiga, Atsushi and Toyoshima, Yasuko and Koyama, Misaki and Konno, Takuya and Hirokawa, Sachiko and Yokoseki, Akio and Nishizawa, Masatoyo and Kakita, Akiyoshi and Takahashi, Hitoshi and Onodera, Osamu},
 	doi = {10.1093/nar/gkw499},
 	file = {:Users/Jack/Downloads/Nucl. Acids Res.-2016-Koyama-nar-gkw499.pdf:pdf},
@@ -6400,7 +6427,7 @@ BibTeX export options can be customized via Preferences -> BibTeX in Mendeley De
 	journal = {PLoS Genetics},
 	number = {10},
 	pmid = {24204307},
-	title = {{ALS-Associated FUS Mutations Result in Compromised FUS Alternative Splicing and Autoregulation}},
+	title = {{ALS-associated FUS mutations result in compromised FUS alternative splicing and autoregulation}},
 	volume = {9},
 	year = {2013}
 }
@@ -6564,49 +6591,6 @@ BibTeX export options can be customized via Preferences -> BibTeX in Mendeley De
   language = "en"
 }
 
-@ARTICLE{Li2015-en,
-  title    = "{RNA-Seq} Analysis of Differential Splice Junction Usage and
-              Intron Retentions by {DEXSeq}",
-  author   = "Li, Yafang and Rao, Xiayu and Mattox, William W and Amos,
-              Christopher I and Liu, Bin",
-  abstract = "Alternative splicing is an important biological process in the
-              generation of multiple functional transcripts from the same
-              genomic sequences. Differential analysis of splice junctions
-              (SJs) and intron retentions (IRs) is helpful in the detection of
-              alternative splicing events. In this study, we conducted
-              differential analysis of SJs and IRs by use of DEXSeq, a
-              Bioconductor package originally designed for differential exon
-              usage analysis in RNA-seq data analysis. We set up an analysis
-              pipeline including mapping of RNA-seq reads, the preparation of
-              count tables of SJs and IRs as the input files, and the
-              differential analysis in DEXSeq. We analyzed the public RNA-seq
-              datasets generated from RNAi experiments on Drosophila
-              melanogaster S2-DRSC cells to deplete RNA-binding proteins
-              (GSE18508). The analysis confirmed previous findings on the
-              alternative splicing of the trol and Ant2 (sesB) genes in the
-              CG8144 (ps)-depletion experiment and identified some new
-              alternative splicing events in other RNAi experiments. We also
-              identified IRs that were confirmed in our SJ analysis. The
-              proposed method used in our study can output the genomic
-              coordinates of differentially used SJs and thus enable sequence
-              motif search. Sequence motif search and gene function annotation
-              analysis helped us infer the underlying mechanism in alternative
-              splicing events. To further evaluate this method, we also applied
-              the method to public RNA-seq data from human breast cancer
-              (GSE45419) and the plant Arabidopsis (SRP008262). In conclusion,
-              our study showed that DEXSeq can be adapted to differential
-              analysis of SJs and IRs, which will facilitate the identification
-              of alternative splicing events and provide insights into the
-              molecular mechanisms of transcription processes and disease
-              development.",
-  journal  = "PLoS One",
-  volume   =  10,
-  number   =  9,
-  pages    = "e0136653",
-  year     =  2015,
-  language = "en"
-}
-
 @ARTICLE{Meili2009-hc,
   title   = "Disease-causing mutations improving the branch site and
              polypyrimidine tract: Pseudoexon activation of {LINE-2} and
@@ -6680,35 +6664,6 @@ BibTeX export options can be customized via Preferences -> BibTeX in Mendeley De
   year    =  2011
 }
 
-@ARTICLE{Ticozzi2011-bs,
-  title    = "Mutational analysis reveals the {FUS} homolog {TAF15} as a
-              candidate gene for familial amyotrophic lateral sclerosis",
-  author   = "Ticozzi, N and Vance, C and Leclerc, A L and Keagle, P and Glass,
-              J D and McKenna-Yasek, D and Sapp, P C and Silani, V and Bosco, D
-              A and Shaw, C E and Brown, Jr, R H and Landers, J E",
-  abstract = "FUS, EWS, and TAF15 belong to the TET family of structurally
-              similar DNA/RNA-binding proteins. Mutations in the FUS gene have
-              recently been discovered as a cause of familial amyotrophic
-              lateral sclerosis (FALS). Given the structural and functional
-              similarities between the three genes, we screened TAF15 and EWS
-              in 263 and 94 index FALS cases, respectively. No coding variants
-              were found in EWS, while we identified six novel changes in
-              TAF15. Of these, two 24 bp deletions and a R388H missense variant
-              were also found in healthy controls. A D386N substitution was
-              shown not to segregate with the disease in the affected pedigree.
-              A single A31T and two R395Q changes were identified in FALS cases
-              but not in over 1,100 controls. Interestingly, one of the R395Q
-              FALS cases also harbors a TARDBP mutation (G384R). Altogether,
-              these results suggest that additional studies are needed to
-              determine whether mutations in the TAF15 gene represent a cause
-              of FALS.",
-  journal  = "Am. J. Med. Genet. B Neuropsychiatr. Genet.",
-  volume   = "156B",
-  number   =  3,
-  pages    = "285--290",
-  year     =  2011,
-  language = "en"
-}
 
 @ARTICLE{Buratti2007-iz,
   title   = "Aberrant 5' splice sites in human disease genes: mutation pattern,
@@ -7338,41 +7293,7 @@ BibTeX export options can be customized via Preferences -> BibTeX in Mendeley De
   language = "en"
 }
 
-@ARTICLE{Mohagheghi2016-zf,
-  title    = "{TDP-43} functions within a network of {hnRNP} proteins to
-              inhibit the production of a truncated human {SORT1} receptor",
-  author   = "Mohagheghi, Fatemeh and Prudencio, Mercedes and Stuani, Cristiana
-              and Cook, Casey and Jansen-West, Karen and Dickson, Dennis W and
-              Petrucelli, Leonard and Buratti, Emanuele",
-  abstract = "The aggregation and mislocalization of RNA-binding proteins leads
-              to the aberrant regulation of RNA metabolism and is a key feature
-              of many neurodegenerative diseases, including amyotrophic lateral
-              sclerosis and frontotemporal dementia. However, the pathological
-              consequences of abnormal deposition of TDP-43 and other
-              RNA-binding proteins remain unclear, as the specific molecular
-              events that drive neurodegeneration have been difficult to
-              identify and continue to be elusive. Here, we provide novel
-              insight into the complexity of the RNA-binding protein network by
-              demonstrating that the inclusion of exon 17b in the SORT1 mRNA, a
-              pathologically relevant splicing event known to be regulated by
-              TDP-43, is also considerably affected by additional RNA-binding
-              proteins, such as hnRNP L, PTB/nPTB and hnRNP A1/A2. Most
-              importantly, the expression of hnRNP A1/A2 and PTB/nPTB is
-              significantly altered in patients with frontotemporal dementia
-              with TDP-43-positive inclusions (FTLD-TDP), indicating that
-              perturbations in RNA metabolism and processing in FTLD-TDP are
-              not exclusively driven by a loss of TDP-43 function. These
-              results also suggest that a comprehensive assessment of the
-              RNA-binding protein network will dramatically advance our current
-              understanding of the role of TDP-43 in disease pathogenesis, as
-              well as enhance both diagnostic and therapeutic capabilities.",
-  journal  = "Human Molecular Genetics",
-  volume   =  25,
-  number   =  3,
-  pages    = "534--545",
-  year     =  2016,
-  language = "en"
-}
+
 
 @ARTICLE{Ling2015,
   title    = "{TDP-43} repression of nonconserved cryptic exons is compromised
@@ -7581,35 +7502,6 @@ BibTeX export options can be customized via Preferences -> BibTeX in Mendeley De
   howpublished = "\url{http://seqanswers.com/forums/archive/index.php/t-42420.html}",
   note         = "Accessed: 2015-10-1",
   year         = 2014,	
-}
-
-@ARTICLE{Neumann2006-re,
-  title    = "Ubiquitinated {TDP-43} in frontotemporal lobar degeneration and
-              amyotrophic lateral sclerosis",
-  author   = "Neumann, Manuela and Sampathu, Deepak M and Kwong, Linda K and
-              Truax, Adam C and Micsenyi, Matthew C and Chou, Thomas T and
-              Bruce, Jennifer and Schuck, Theresa and Grossman, Murray and
-              Clark, Christopher M and McCluskey, Leo F and Miller, Bruce L and
-              Masliah, Eliezer and Mackenzie, Ian R and Feldman, Howard and
-              Feiden, Wolfgang and Kretzschmar, Hans A and Trojanowski, John Q
-              and Lee, Virginia M-Y",
-  abstract = "Ubiquitin-positive, tau- and alpha-synuclein-negative inclusions
-              are hallmarks of frontotemporal lobar degeneration with
-              ubiquitin-positive inclusions and amyotrophic lateral sclerosis.
-              Although the identity of the ubiquitinated protein specific to
-              either disorder was unknown, we showed that TDP-43 is the major
-              disease protein in both disorders. Pathologic TDP-43 was
-              hyper-phosphorylated, ubiquitinated, and cleaved to generate
-              C-terminal fragments and was recovered only from affected central
-              nervous system regions, including hippocampus, neocortex, and
-              spinal cord. TDP-43 represents the common pathologic substrate
-              linking these neurodegenerative disorders.",
-  journal  = "Science",
-  volume   =  314,
-  number   =  5796,
-  pages    = "130--133",
-  year     =  2006,
-  language = "en"
 }
 
 @article{Yasuda2013,
@@ -8134,38 +8026,6 @@ BibTeX export options can be customized via Preferences -> BibTeX in Mendeley De
   number   =  43,
   pages    = "28852--28859",
   year     =  2008,
-  language = "en"
-}
-
-@ARTICLE{Zarnack2013-nv,
-  title    = "Direct competition between {hnRNP} {C} and {U2AF65} protects the
-              transcriptome from the exonization of Alu elements",
-  author   = "Zarnack, Kathi and K{\"{o}}nig, Julian and Tajnik, Mojca and
-              Martincorena, I\~{n}igo and Eustermann, Sebastian and
-              St\'{e}vant, Isabelle and Reyes, Alejandro and Anders, Simon and
-              Luscombe, Nicholas M and Ule, Jernej",
-  abstract = "There are ~650,000 Alu elements in transcribed regions of the
-              human genome. These elements contain cryptic splice sites, so
-              they are in constant danger of aberrant incorporation into mature
-              transcripts. Despite posing a major threat to transcriptome
-              integrity, little is known about the molecular mechanisms
-              preventing their inclusion. Here, we present a mechanism for
-              protecting the human transcriptome from the aberrant exonization
-              of transposable elements. Quantitative iCLIP data show that the
-              RNA-binding protein hnRNP C competes with the splicing factor
-              U2AF65 at many genuine and cryptic splice sites. Loss of hnRNP C
-              leads to formation of previously suppressed Alu exons, which
-              severely disrupt transcript function. Minigene experiments
-              explain disease-associated mutations in Alu elements that hamper
-              hnRNP C binding. Thus, by preventing U2AF65 binding to Alu
-              elements, hnRNP C plays a critical role as a genome-wide sentinel
-              protecting the transcriptome. The findings have important
-              implications for human evolution and disease.",
-  journal  = "Cell",
-  volume   =  152,
-  number   =  3,
-  pages    = "453--466",
-  year     =  2013,
   language = "en"
 }
 
