--- a/thesis_master.tex
+++ b/thesis_master.tex
@@ -5,6 +5,7 @@
 \usepackage{graphicx}
 \usepackage{hyperref} %this makes everything hyper-refed
 \usepackage{fancyhdr}
+\usepackage{parskip} % spaces between paragraphs instead of indents
 \usepackage{subfigure}
 \usepackage{textgreek}
 \usepackage{enumitem}
