--- a/thesis_master.tex
+++ b/thesis_master.tex
@@ -3,10 +3,12 @@
 
 %%%pre-amble%%%%%%%%
 \usepackage{graphicx}
+\usepackage{siunitx} % for degree symbols 90\si{\degree}C
 \usepackage{hyperref} %this makes everything hyper-refed
 \usepackage{fancyhdr}
 \usepackage{parskip} % spaces between paragraphs instead of indents
-\usepackage{subfigure}
+\usepackage[font={small},labelfont={bf},margin=10pt]{caption} % make figure captions small and italic
+%\usepackage{subfigure}
 \usepackage{textgreek}
 \usepackage{enumitem}
 \usepackage{booktabs}
@@ -57,7 +59,7 @@
 \begin{document}
 \setcounter{page}{7}
 
-%\input{Chapters/00_frontmatter.tex}
+\input{Chapters/00_frontmatter.tex}
 
 \pagenumbering{arabic} % Switch to normal numbers
 
@@ -66,12 +68,12 @@
 %\input{Chapters/99_acknowledgements.tex}
 
 % CONTENT
-\input{Chapters/01_introduction.tex}
+%\input{Chapters/01_introduction.tex}
 %\input{Chapters/02_methods.tex}
 %\input{Chapters/03_cryptic_exons.tex}
 %\input{Chapters/04_fus_mice.tex}
 %\input{Chapters/05_tdp_mice.tex}
-%\input{Chapters/06_fus_meta.tex}
+\input{Chapters/06_fus_meta.tex}
 %\input{Chapters/discussion.tex}
 
 
